CR-2002-03-26-1  Bugfix:    qstat -f -> 
                            8 x times logging: "... neither submit nor admin host"

CR-2002-03-26-0  Bugfix:    can't resolve hostname "%-.100s" from act_qmaster file
                            message

AH-2002-03-25-0  Bugfix:    gethostbyname -aname was broken
                 Optimiz.:  Ensure global conf is read only one time by
                            AH-2002-03-22-0 code

JG-2002-03-25-0  Testsuite: Bugfix: In a cluster with very similar hostnames
                            testsuite wrongly reused open remote connections.

AS-2002-03-22-0  Change:    reresolve_me_qualified_hostname() does not log
                            anymore. Calling functions now do appropriate
                            logging.

CR-2002-03-22-2  Bugfix:    qacct output formatting

AA-2002-03-22-3  Bugfix:    sharetree position of FindNext not visible fix

CR-2002-03-22-1  Bugfix:    Enhancements for CR-2002-03-22-0
                 Issue:     #158

AA-2002-03-22-2  Bugfix:    Tru64 spinbox incrementLarge fix for cluster
                            config dialogue

CR-2002-03-22-0  Bugfix:    Reopend issue: Wrong error message when service sge_commd 
                            is not available 
                 Issue:     #158

AH-2002-03-22-0  Bugfix:    Ensure shepherd mapping signals do not hit shepherd itself
                            because of signal handler not installed when signals
                            are released by sigprocmask(2) 

AH-2002-03-22-0  Bugfix:    Retrieve ignore_fqdn and default_domain at client/daemon 
                            startup from global cluster config to overcome problems
                            with hashing of hostnames in certain cases.

AA-2002-03-21-1  Bugfix:    sorting in functional/override policy,
                            fix for not emptying matrix

AA-2002-03-21-0  Bugfix:    SGE_KEYFILE, SGE_CERTFILE 
                            sec install scripts
