@@ -1,3 +1,7 @@
+JG-2002-03-26-0  Testsuite: Installation with many hosts did not work due to
+                            some buffer (commandline?) being too small.
+                            Pass hostnames to install_qmaster in a file.
+
 CR-2002-03-26-1  Bugfix:    qstat -f -> 
                             8 x times logging: "... neither submit nor admin host"
 
